style.css
.bangers-regular {
  font-family: "Bangers", system-ui;
  font-weight: 400;
  font-style: normal;
}

.lilita-one-regular {
  font-family: "Lilita One", sans-serif;
  font-weight: 400;
  font-style: normal;
}

body {
    background-image: url(images/bg.png);
    background-size: 100%;
    margin:0;
    padding:0;
}

body * {
    flex-direction: column;
    box-sizing: border-box;
    display: flex;
}

.nav-border{
    background-color:#1a1a1a;
    height:60px;
    justify-content: center;
    margin-top:5px;
}

.nav-bar{
    position: top;
    background-color: #1a1a1a;
    border: solid #f5ecd2;
    border-inline: 5px;
    height:55px;
    align-items: space-between;
    justify-content: center;
}

.logousername ul{
    justify-content: space-between;
    padding-inline: 30px;
    font-size: 2em;
    flex-direction: row;
    font-family: "Bangers";
    color:#f5ecd2;
    list-style-type: none;
}

ul a {
    text-decoration: none;
    color:#f5ecd2;
}

a:hover, #credits:hover{
    color:#eedca7;
    cursor:pointer;
}

.panels {
    margin:50px auto;
    width:1000px;
}
.main-game {
    align-self:center;
    flex-direction: row;
    background-color: #c11d11;
    width:1000px;
    height:350px;
    justify-content: center;
    border: 5px solid #1a1a1a;
    box-shadow:#1a1a1a 10px 5px 5px;
}

.vs-img {
    width:200px;
    height:auto;
}

.mid-panels {
    flex-direction: row;
    align-content: center;
}

.scoreboard {
    background-color:#173b61;
    border: 5px solid #1a1a1a;
    margin: 10px 5px 10px 0px;
    width:500px;
    box-shadow:#1a1a1a 5px 5px 5px;
}

.score-titles,.score-count{
    justify-content: space-between;
    padding-inline: 30px;
    font-size: 1.5em;
    flex-direction: row;
    font-family: "Bangers";
    list-style-type: none;
    color: #f5ecd2;
}

.score-titles{
    margin-top: 10px;
    padding-bottom:5px;
    border-bottom: 5px solid #1a1a1a;;
}

.score-count {
    margin-top: -2px;
    font-size: 2em;
    gap:50px;
    justify-content: space-around;
}

.processing-panel {
    background-color:#00995e;
    border: 5px solid #1a1a1a;
    margin:10px 0px 10px 5px;
    width:500px;
    height: 142.94px;
    font-family: "Lilita One";
    color:#1a1a1a;
    align-items:center;
    justify-content: center;
    font-size: 1.7em;
        box-shadow:#1a1a1a 10px 5px 5px;
}

button {
    width:325px;
    height: 150px;
    border:#1a1a1a 5px solid;
    justify-content: center;
    align-items: center;
    background-color: #552cb7;
    box-shadow:#1a1a1a 5px 10px 5px;
}

#scissors {
    box-shadow:#1a1a1a 10px 10px 5px;
}
button:hover {
    cursor:pointer;
    background-color: #42228d;
}

button:active{
    transform: scale(0.98);
    border: inset #000000 5px ;
    box-shadow:#1a1a1a 5px 10px 5px;
}

.buttons {
    width:1000px;
    height:150px;
    flex-direction: row;
    justify-content: space-between;
    align-content: center;
}

.buttons img {
    width:200px;
    height:auto;
}

#paper img {
    height: 115px;
    width: auto;
    margin-top: 15px;
}
.footer-border {
    background-color: #1a1a1a;
    height:58px;
}
.footer-sec {
    flex-direction: row;
    background-color: #1a1a1a;
    border-top: solid #f5ecd2;
    border-inline: 5px;
    height:55px;
    align-items: center;
    justify-content: center;
    color: #f5ecd2;
}

.text ul,.text li{
    justify-content: space-between;
    padding-inline: 30px;
    flex-direction: row;
    font-family: "Bangers";
    color:#f5ecd2;
    list-style-type: none;
}

.text {
    width:100%;
}

.footer-sec,.footer-border{
    width:100%;
    position:absolute;
    bottom:0;
}

.tooltip {
    background-color: #1a1a1a;
    padding:10px;
    width: max-content;
    text-align: center;
    font-size: 1em;
    border: 5px solid #eedca7;
    box-shadow:#1a1a1a 10px 10px 5px;
}

.tooltip a{
    text-decoration: none;
    color:#f5ecd2;
    padding:10px;
}

.tooltip .a:hover {
    color: #eedca7;
}

.tooltip {
    display:none;
    position:absolute;
    bottom: -20px;
    right: 20px;
}

#credits:hover > .tooltip {
    display: block;
    margin-bottom: 100px;
}

